[project]
name = "mlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# add the project root to sys.path so `import micro_grad` works from tests/
pythonpath = ["."]
testpaths = ["tests"]
