[project]
name = "python-language-demo"
version = "1.0.0"
description = "Python language usage demos — types, collections, functions, classes/protocols, generics, error handling, async, advanced types, decorators, reference semantics, standard library, testing."
requires-python = ">=3.12"
dependencies = []

# No third-party runtime dependencies; runs with the standard library alone: python main.py

[tool.mypy]
# For static type checking: pip install mypy && mypy .
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.ruff]
# For lint / formatting: pip install ruff && ruff check . && ruff format .
target-version = "py312"
line-length = 100
