[package]
name = "rust-language-demo"
version = "1.0.0"
edition = "2021"
description = "Rust language usage demos — types, collections, functions, control flow, structs/traits, generics, error handling, concurrency, advanced types, macros, ownership, standard library, iterators, modules, sorting & equality, testing."

[[bin]]
name = "rust-language-demo"
path = "src/main.rs"

[dependencies]
# No third-party dependencies; runs with the standard library alone: cargo run
